Process Hacker

1.11
 * NEW/IMPROVED:
   * System Idle Process threads are shown
   * Find handles by object address
 * FIXED:
   * #2926287 - "Scroll Problems with Microsoft Intellipoint Mouse"
   * Major process properties memory leak

1.10
 * NEW/IMPROVED:
   * .NET tab in process properties - exact copy of Process Explorer's tab
   * Small performance improvements
 * FIXED:
   * #2920711 - "Value was either too large or too small for an Int32."
   * #2920734 - "Found a reproducible bug : Value does not fall within..."
   * Missing service descriptions in dumps
   * Multi-threading issues with highlighting
   * Highlighting for incredibly small intervals, ignoring user settings

1.9
 * NEW/IMPROVED:
   * Dump/view process information
   * Added useful tooltips to the module list
   * The "-elevate" command line option propagates other arguments
 * FIXED:
   * #2911938 - "The given key was not present in the dictionary."
   * #2911957 - "The given key was not present in the dictionary."
   * #2912500 - "Failed to compare two elements in the array."
   * #2917952 - "Index was outside the bounds of the array."
   * Buggy save as text file behaviour on Windows XP

1.8
 * NEW/IMPROVED:
   * Ability to set I/O priority for processes and threads
   * No more separate Assistant.exe executable required
   * Signature verification now works on x64
   * Now shows signer names (plus a Verified Signer column)
   * Added proper x64 support to structs reader
   * Added basic preprocessor to structs reader
   * WOW64 modules now appear in Handle/DLL searches
   * Small performance improvements
   * Editing object SACLs is now possible with KProcessHacker
 * FIXED:
   * #2902988 - "Toolbar not shown after saving options"
   * Find window and select thread sometimes not working

1.7
 * NEW/IMPROVED:
   * #2873973 - "Columns window improvements"
   * New settings system - settings can now be saved anywhere
   * Decreased memory and CPU usage